--- a/turan.tex
+++ b/turan.tex
@@ -462,7 +462,7 @@ $\ymax(\emptyset)=0$, and $\xmax(\emptyset)=1$.
 \begin{obs}\obslabel{swords-region}
   For any non-empty set $S\subset Q$, $\survivors(\{\swords\},S)$
   is contained in the union of a \emph{triangular region} $T=\{(x,y)\in
-  Q: x\le \xmin(S)+1\}$, a \emph{rectangular region} $R=\{(x,y)\in Q:
+  Q: x\le \ymin(S)+1\}$, a \emph{rectangular region} $R=\{(x,y)\in Q:
   x\ge \xmax(S),\, y\ge \ymax(S)\}$, a \emph{vertical line} $V=\{(x,y)\in Q:
   x=\xmin(S)\}$ and a \emph{horizontal line} $H=\{(x,y)\in Q: y=\ymin(S)\}$.
 \end{obs}
