--- a/slides.tex
+++ b/slides.tex
@@ -1,5 +1,6 @@
 \documentclass{beamer}
 \usepackage{amsmath}
+\usepackage{tipa}
 \usepackage[utf8]{inputenc}
 \usepackage{xmpmulti}
 
@@ -43,10 +44,9 @@
   \framesubtitle{Erd\H{o}s and Purdy (1971)}
 
   \begin{itemize}
-      \item What is the largest number of
-        maximum area triangles determined by a set of $n$ points?
+      \item What is the largest number of maximum area triangles determined by a set of $n$ points?\\[1ex]
       \centerline{\mi{slidefigs/erdos-regular}}%
-      \item<2->At least $n$
+      \item<2->Answer: At least $n$
   \end{itemize}
 \end{frame}
 
@@ -59,12 +59,14 @@
       \item WLOG we can assume points are in convex position
       \item How can a pair of maximum area triangles interleave?
       \begin{itemize}
+         \item Boyce, Dobkin, Drysdale, Guibas (1985)
          \item Like this: \taco, \david, \crossing, \mariposa
          \item Not like this: \ears, \swords, \nested, \bat
       \end{itemize}
       \item What is the maximum number of triangles we can draw on a convex
          $n$-gon before we
          get a pair that like  \ears, \swords, \nested, or \bat?
+      \item No geometry!
   \end{itemize}
 \end{frame}
 
@@ -79,9 +81,9 @@
   \begin{itemize}[<+->]
      \item Number polygon vertices $0,\ldots,n-1$
      \item Represent each triangle as a triple: $(a,b,c)$, with $0\le a<b<c<n$.
-     \item Order triangles according to 
-         \[ (a,b,c)\preceq (d,e,f) \Leftrightarrow a\le d, b\le e, c\le f \] 
-     \item Key insight: Any pair of triangles (\taco, \david, \crossing, \mariposa) is comparable! 
+     \item Partially-order triangles according to 
+         \[ (x_1,y_1,z_1)\preceq (x_2,y_2,z_2) \Leftrightarrow x_1\le x_2, y_1\le y_2, z_1\le z_2 \] 
+     \item Key insight: Any pair of maximum-area triangles (\taco, \david, \crossing, \mariposa) is comparable! 
      \item $\Delta_1<\Delta_2<\cdots<\Delta_k \Rightarrow k \le 3n$
      \item Count a bit more carefully to get $k\le n$ \hfill{QED}
   \end{itemize}
@@ -111,15 +113,25 @@
 
 \begin{frame}
   \frametitle{Proof that $\ex(n,\{\crossing\})=O(n^2)$}
+  \framesubtitle{Bra\ss (2004)}
 
   \centerline{\mi{slidefigs/crossing}}
+
+  \begin{itemize}[<4->]
+      \item[]\ \hfill{QED}
+  \end{itemize}
 \end{frame} 
 
 
 \begin{frame}
   \frametitle{Proof that $\ex(n,\{\swords\})=O(n^2)$}
+  \framesubtitle{Bra\ss (2004)}
 
   \centerline{\mi{slidefigs/swords}}
+  \begin{itemize}[<4->]
+      \item[]\ \hfill{QED}
+  \end{itemize}
+
 \end{frame} 
 
 
@@ -131,6 +143,13 @@
   \begin{itemize}[<+->]
    \item Randomly direct each pair $u,v$ of vertices ($\overrightarrow{uv}$ or $\overleftarrow{uv}$)
    \item Discard all triangles that use $uv$ and are on the right of $uv$
+  \end{itemize}
+   \centerline{
+       \only<1>{\includegraphics{slidefigs/chucker-1}}%
+       \only<2>{\includegraphics{slidefigs/chucker-2}}%
+       \only<3->{\includegraphics{slidefigs/chucker-3}}%
+    }
+  \begin{itemize}[<+->]
    \item Resulting set has expected size $N/8$ and no $\mariposa$ pairs
   \end{itemize} 
 \end{frame} 
@@ -142,17 +161,109 @@
    Let $\ex'(n,X)$ be the just like $\ex(n,X)$ but we only count triangles
    with one vertex in the bottom half and two in the top half.
 
-   \centerline{top-bottom}
+   \centerline{\includegraphics{slidefigs/top-bottom}}
 
-   \textbf{Theorem:} Any set of triangles of size $N$ contains a subset
-    of size at least $N/8$ that has no \mariposa\ pair
-  \begin{itemize}[<+->]
-   \item Randomly direct each pair $u,v$ of vertices ($\overrightarrow{uv}$ or $\overleftarrow{uv}$)
-   \item Discard all triangles that use $uv$ and are on the right of $uv$
-   \item Resulting set has expected size $N/8$ and no $\mariposa$ pairs
-  \end{itemize} 
+\textbf{Lemma:}
+  If $\ex'(n,X)\in O(n^c)$, then
+  \[
+     \ex(n,X)\in 
+        \begin{cases} 
+            O(n^c)     & \text{if $c>1$} \\
+            O(n\log n) & \text{if $c=1$}
+        \end{cases}
+  \]
+  \emph{Proof:} $\ex(n)\le 2\ex'(n) + 2\ex(n/2)$
+\end{frame} 
+
+\begin{frame}
+    \frametitle{The Dot-Puzzle View}
+    \framesubtitle{A One-Player Game}
+
+    \includegraphics[width=.95\textwidth]{figs/point-view}
+\end{frame}
+
+\begin{frame}
+    \frametitle{The Dot-Puzzle View}
+    \framesubtitle{The Rules}
+
+   \begin{center}
+      \newlength{\ka}
+      \setlength{\ka}{\textwidth}
+      \addtolength{\ka}{-1cm}
+      \begin{tabular}{c@{\hspace{1cm}}c}
+        \includegraphics[width=.48\ka]{figs/crapper-2} & 
+        \includegraphics[width=.48\ka]{figs/crapper-1} \\
+        within round & subsequent rounds
+      \end{tabular}
+   \end{center}
+\end{frame}
+
+\begin{frame}
+   \frametitle{\swords\ is a killer}
+   \framesubtitle{
+      %\newlength{\ka}
+      \setlength{\ka}{.3\textwidth}
+      \addtolength{\ka}{-1cm}
+      \begin{tabular}{c@{\hspace{1cm}}c}
+        \includegraphics[width=.48\ka]{figs/crapper-2} & 
+        \includegraphics[width=.48\ka]{figs/crapper-1} 
+      \end{tabular}
+   }
+   \centerline{\includegraphics{slidefigs/swords-region-1}}
+\end{frame}
+
+\begin{frame}
+   \frametitle{$\ex'(n,\{\taco,\nested,\crossing\}) = O(n)$}
+   \framesubtitle{
+      %\newlength{\ka}
+      \setlength{\ka}{.3\textwidth}
+      \addtolength{\ka}{-1cm}
+      \begin{tabular}{c@{\hspace{1cm}}c}
+        \includegraphics[width=.48\ka]{figs/crapper-2} & 
+        \includegraphics[width=.48\ka]{figs/crapper-1} 
+      \end{tabular}
+   }
+   \begin{itemize}[<+->]
+      \item \nested\ ensures points in one round are non-decreasing 
+      \item Union of rules ensures these points are killed in subsequent rounds:\\[1ex]
+         \centerline{\includegraphics{figs/killers-10}}
+      \item Each point in round $i$ kills one row or column in subsequent rounds\hfill{QED}
+   \end{itemize}
 \end{frame} 
 
 
+\begin{frame}
+   \frametitle{$\ex(n,\{\taco,\nested\})$ the open problem}
+   \framesubtitle{
+      %\newlength{\ka}
+      \setlength{\ka}{.3\textwidth}
+      \addtolength{\ka}{-1cm}
+      \begin{tabular}{c@{\hspace{1cm}}c}
+        \includegraphics[width=.48\ka]{figs/crapper-2} & 
+        \includegraphics[width=.48\ka]{figs/crapper-1} 
+      \end{tabular}
+   }
+   \begin{itemize}[<+->]
+      \item Within one round, points must be increasing
+      \item Each point kills a {\textcorner}\ shape
+      \item $\Omega(n^{3/2})$ lower bound is easy
+      \item We have no upper bound better than $O(n^2)$
+   \end{itemize}
+\end{frame}
+
+\begin{frame}
+   \frametitle{The End}
+   \begin{center}
+      %\newlength{\ka}
+      \setlength{\ka}{.9\textwidth}
+      \addtolength{\ka}{-1cm}
+      \begin{tabular}{c@{\hspace{1cm}}c}
+        \includegraphics[width=.48\ka]{figs/crapper-2} & 
+        \includegraphics[width=.48\ka]{figs/crapper-1} 
+      \end{tabular}
+   \end{center}
+   \centerline{\Huge Thanks!}
+\end{frame}
+ 
 \end{document}
 
